docker: install bzr for launchpad.net

--- a/docker/ocagent/Dockerfile
+++ b/docker/ocagent/Dockerfile
@@ -1,9 +1,11 @@
 ARG GOLANG_VERSION
 ARG ALPINE_VERSION
 FROM docker.io/golang:${GOLANG_VERSION}-alpine${ALPINE_VERSION} AS ocagent-builder
-ENV OUTDIR=/out
+ENV GO111MODULE=on \
+	OUTDIR=/out
 RUN set -eux && \
 	apk add --no-cache \
+		bzr \
 		ca-certificates \
 		git
 RUN set -eux && \
