--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,9 +5,9 @@ steps:
       - build
       - --pull
       - --build-arg
-      - GOLANG_VERSION=1.12rc1
+      - GOLANG_VERSION=1.11
       - --build-arg
-      - ALPINE_VERSION=3.9
+      - ALPINE_VERSION=3.8
       - --target
       - ocagent
       - -t
@@ -19,9 +19,9 @@ steps:
       - build
       - --pull
       - --build-arg
-      - GOLANG_VERSION=1.12rc1
+      - GOLANG_VERSION=1.11
       - --build-arg
-      - ALPINE_VERSION=3.9
+      - ALPINE_VERSION=3.8
       - --target
       - occollector
       - -t
